edition = "2023";

package wayplatform.connect.tachograph.datadictionary.v1;

import "wayplatform/connect/tachograph/datadictionary/v1/annotations.proto";

// CardSlotNumber indicates the driver or co-driver slot.
// See Data Dictionary, Section 2.33.
enum CardSlotNumber {
  CARD_SLOT_NUMBER_UNSPECIFIED = 0;
  CARD_SLOT_NUMBER_UNRECOGNIZED = 1;
  DRIVER_SLOT = 2 [(protocol_enum_value) = 0];
  CO_DRIVER_SLOT = 3 [(protocol_enum_value) = 1];
}
